# MapScan

./: .gitignore  CLAUDE.md  PHASE0_HANDOFF.md  README.md  prompt.txt
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/integration_test/: analyze_android_test.dart
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/rust/: frb_generated.dart  (+2 more)
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/rust/: Cargo.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: analyze.rs  cost_grid.rs  course_detection.rs  geometry.rs  mask_utils.rs  mod.rs  pathfinding.rs  preprocessing.rs  segmentation.rs  vectorize.rs
app/rust/tests/: analyze.rs  rectify_photo.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle
app/rust_builder/ios/: rust_core.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_core.podspec
app/rust_builder/windows/: CMakeLists.txt
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc
output/: map0.geojson  map2.geojson  map4.geojson  map6.geojson
pipeline/: config.py  cost_grid.py  course_detection.py  pathfinding.py  preprocessing.py  segmentation.py  vectorize.py  visualize.py
python_prototype/: README.md
python_prototype/pipeline/: pathfinding.py
python_prototype/tests/: test_cost_grid.py  test_geometry.py  test_pathfinding.py  test_pipeline_golden.py
scripts/: run_pipeline.py
tests/: test_cost_grid.py  test_geometry.py  test_pathfinding.py  test_pipeline_golden.py  test_smoke.py
(+12 files in other folders)
